# ruhu-atlas-challenge-2026

./: .gitignore  .opensrc  AGENTS.md  CLAUDE.md  LICENSE  Makefile  README.md  Ruhu_Architecture.html  alembic.ini  pyproject.toml  test_api_integration.py  test_e2e_simple.py  test_e2e_with_auth.py  test_runner.py  test_sales_agent_template.py  test_schema_verification.py
.github/: dependabot.yml
.github/workflows/: ci.yml
alembic/: README.md  env.py
alembic/versions/: 20260410_0415_0001_initial_postgres_baseline.py  20260410_0930_0002_sales_demo_leads.py  20260410_1210_0003_graph_versions.py  20260410_1535_0004_runtime_tenant_rls.py  20260410_1615_0005_realtime_core.py  20260410_1745_0006_simulation_eval.py  20260410_1900_0007_kpi_runtime_sources.py  20260410_2035_0008_graph_settings_eval_policy.py  20260410_2215_0009_ticket_system.py  20260410_2330_0010_kpi_domain_tables.py  20260411_0015_0011_kpi_execution_constraints.py  20260411_0145_0012_ticketing_activity.py  20260411_0200_0013_journey_foundation.py  20260411_0330_0014_ticketing_retry_queue.py  20260411_0430_0015_intent_tags_foundation.py  20260411_0630_0016_intent_tags_summary_core.py  20260411_0730_0017_intent_tags_review_enhancements.py  20260411_0830_0018_rules_foundation.py  20260411_0900_0019_turn_trace_rules.py  20260411_1000_0020_knowledge_source_url.py  20260411_1100_0021_notifications_foundation.py  20260411_1200_0022_user_avatar_blobs.py  20260411_1300_0023_api_keys.py  20260411_1400_0024_org_deletion_state.py  20260411_1415_0024_journey_runtime_jobs.py  20260411_1800_0025_realtime_outbox_dedupe_repair.py  20260411_1900_0026_journey_runtime_worker_leases.py  (+64 more)
frontend/: .eslintrc.cjs  .gitignore  README.md  index.html  jest.config.cjs  jest.setup.ts  knip.json  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json  vite.config.ts
infra/: README.md
monitoring/: README.md
scripts/: atlas_readiness_smoke.py  backfill_encrypt_credentials.py  bootstrap_ruhu_dev.sh  build_ruhu_sentinel_brief.py  capture_classifier_baseline.py  export_openapi.py  generate_jwt_keys.py  migrate_classifier_strategy.py  migrate_legacy_policies.py  migrate_to_edge_outcomes.py  preflight_browser_agent.py  preflight_observability.py  prototype_composite_to_code.py  release_hygiene_smoke.sh  reset_non_auth_schema.py  rotate_jwt_keys.py  run_agent_dev.sh  send_auth_email_smoke.py  smoke_test_gemma_classifier.py  topic_enforcement_rollout.py  upgrade_agent_from_template.py
src/ruhu/: api.py  (+137 more)
tests/: __init__.py  conftest.py  test_agent_document.py  test_agent_review_publish_qualification.py  test_analysis_sweep_api.py  test_api.py  test_async_db.py  test_async_db_postgres.py  test_atlas_api.py  test_atlas_coordinator_fixes.py  test_atlas_docs_parser.py  test_atlas_generator.py  test_atlas_generator_integration.py  test_atlas_provisioning_fetch.py  test_atlas_readiness.py  test_attachment_conditions.py  test_attachment_producers.py  test_attachment_projection_events.py  test_attachment_retention.py  test_attachments_blob_store_dispatch.py  test_attachments_service.py  test_audit.py  test_auth_deps.py  test_auth_email_smoke.py  test_auth_jwt_codec.py  test_auth_runtime.py  test_auth_shell.py  test_auth_ui.py  test_auth_ui_flows.py  test_billing_service.py  test_billing_sqlalchemy.py  test_billing_webhook_idempotency.py  test_blob_store.py  test_browser_agent_preflight.py  test_browser_playwright_adapter.py  test_browser_playwright_adapter_integration.py  test_browser_task_packs.py  test_browser_task_runtime.py  test_browser_task_tool.py  test_browser_tasks_api.py  (+183 more)
tests_playwright/: conftest.py  test_auth_playwright.py  test_journeys_playwright.py  test_phone_numbers_playwright.py  test_tickets_playwright.py  test_widget_voice_playwright.py
(+725 files in other folders)
